--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ body {
   transform: translateY(-50%);
   right: 20px;
   position: absolute;
-  transition: 1s ease-in;
 }
 
 .details {
@@ -60,7 +59,6 @@ body {
   font-family: "Arial", sans-serif;
   font-size: 20px;
   font-weight: 700;
-  transition: 1s;
 }
 
 .extra {
@@ -75,9 +73,9 @@ body {
   border-radius: 10px;
   transform: scale(1.3);
   background-color: #eee;
-  cursor: pointer;
   z-index: 2;
   height: auto;
+  cursor: pointer;
 }
 
 .person:hover .extra {
@@ -85,8 +83,8 @@ body {
 }
 
 .person:hover .photo{
-  max-width: 180px;
-  max-height: 180px;
+  width: 180px;
+  height: 180px;
   border-radius: 60px;
 }
 
